--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                             <span class="material-icons">inventory_2</span>
                         </div>
                     </div>
-                    <img width="60px" alt="Static Badge" src="https://img.shields.io/badge/Count-256-blue">
+                    <span class="text-primary">256</span>
                 </div>
 
                 <div class="card">
